Track espn.com bottomline feed

--- a/config.yaml
+++ b/config.yaml
@@ -21,3 +21,10 @@ monitors:
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
+  - id: espnbottomline # unique identifier
+    name: 'espn.com scores'
+    description: 'ESPN.com bottomline scores feed' # default=empty
+    url: 'http://www.espn.com/mens-college-basketball/bottomline/scores' # URL to fetch
+    method: GET # default=GET
+    expectStatus: 200 # operational status, default=200
+    followRedirect: false # should fetch follow redirects, default=false
